# rpicam-cpp

./: CMakeLists.txt  README.md
include/: rpicam.hpp  rpicam_camcontrol.hpp  rpicam_configs.hpp
src/: rpicam.cpp  rpicam_camcontrol.cpp  rpicam_testmain.cpp
